# enterprise-conversational-ai-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
adr/: 001-fastapi-webhook-layer.md  002-chromadb-vs-faiss.md  003-gemini-vertex-sdk.md  004-jwt-webhook-auth.md
app/: config.py  dependencies.py  main.py
app/api/middleware/: auth.py  logging.py
app/api/routes/: admin.py  health.py  webhook.py
app/core/: exceptions.py  logging.py  security.py
app/integrations/: base.py
app/integrations/active_directory/: base.py  client.py  mock.py
app/integrations/servicenow/: base.py  client.py  mock.py
app/integrations/vpn/: base.py  client.py  mock.py
app/models/: dialogflow.py  session.py  ticket.py  user.py
app/services/business/: auth_service.py  base.py  escalation_service.py  password_service.py  session_service.py  (+2 more)
app/webhook/: dispatcher.py  response_builder.py
dialogflow/: README.md
dialogflow/agent-export/: agent.json
dialogflow/flows/: escalation-flow.md  password-reset-flow.md  ticket-management-flow.md  vpn-troubleshooting-flow.md
docs/: architecture.md  deployment.md  sample-conversations.md
docs/diagrams/: architecture.mmd  sequence-flows.mmd
knowledge_base/: README.md
knowledge_base/documents/: it-support-faq.md  password-policy.md  software-policy.md  vpn-guide.md
scripts/: generate_jwt.py  ingest_knowledge_base.py  seed_mock_data.py
tests/: conftest.py
tests/integration/: test_rag_pipeline.py  test_webhook_endpoint.py
(+32 files in other folders)
